Enhance CI configuration by adding retry logic for Maven commands, introduce ci-settings.xml for centralized Maven settings, and update all relevant CI scripts to utilize the new settings file.